# props

./: .gitignore  README.md  nbaguide.md
.github/workflows/: test.yml  text.yml
client/: .gitignore  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.mts
client/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
client/.svelte-kit/adapter-bun/: index.js  manifest.js
client/e2e/: demo.test.ts
client/src/: app.html
client/src/app/: globals.css  layout.css  layout.tsx  loading.tsx  page.tsx
client/src/lib/: index.ts
client/src/lib/api/: nbaAPi.ts
client/src/routes/: +error.svelte  +layout.svelte  +page.server.ts  app.css  page.svelte.spec.ts
server/: .gitignore  Cargo.toml  Dockerfile  build.sh
server/python/: fetch_injuries.py  fetch_player_info.py  fetch_player_latest_avg.py  fetch_player_latest_games.py  fetch_teams.py  injuries.py  player_latest5.py  requirements.txt  scoreboard.py  team_details.py
server/src/: app.rs  config.rs  main.rs
server/src/cache/: keys.rs  mod.rs
server/src/handlers/: mod.rs
server/src/handlers/nba/: games.rs  injuries.rs  leaders.rs  mod.rs  players.rs  teams.rs
server/src/middleware/: logger.rs
server/src/models/: espn.rs  mod.rs  nba.rs  nba_api.rs  nba_com.rs
server/src/routes/: mod.rs  nba.rs  nba_route.rs
server/src/tests/: integration.rs
server/src/tests/handlers/nba/: teams.rs
server/src/utils/: mod.rs  python.rs  tracing.rs
sveltekit-client/: package.json  vite.config.ts
sveltekit-client/src/: app.html
(+145 files in other folders)
