[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
dotenvy = "0.15.7"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls", "hickory-dns"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

[dev-dependencies]
axum-test = "18.4.1"
